Fri May  2 11:17:14 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/character_sets.h: update some multibyte data
	* src/tds/read.c: added some comments

Fri May  2 07:57:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h src/tds/iconv.c:
	- some fixes
	- some warnings removed

Thu May  1 13:51:32 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c decrement input_size if no iconv

Thu May 01 14:39:10 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsodbc.h src/odbc/odbc.c:
	* src/tds/mem.c:
	- free dynamic from TDSSOCKET when not needed
	- reuse code in ODBC
	- handle SQL_DATABASE_NAME in SQLGetInfo

Thu May 01 09:35:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/dbmorecmds.c src/tds/util.c:
	- just some formatting

Wed Apr 30 20:49:56 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/pool/main.c src/pool/member.c:
	* src/pool/pool.h src/tds/token.c:
	- renamed TDS_COMPLETED in TDS_IDLE
	* src/tds/query.c:
	- changed idle test to tds->state != TDS_IDLE
	- add some (many?) FIXME and TODO comments
	* src/odbc/prepare_query.c:
	- handle image/text in emulated prepared query
	
Wed Apr 30 17:28:26 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/query.c:
	- continue on dynamic work
	  (now I have some problem for garbage coming from server)

Wed Apr 30 15:48:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/binary_test.c:
	- use SQL_LONGVARBINARY, not SQL_BINARY
	* src/tds/query.c:
	- improve dynamic (pass param name for parameter definition)
	* src/tds/unittests/dynamic1.c: fix and update

Wed Apr 30 15:12:16 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c:
	- improve dynamic query (not finished)
	- server types enum

Wed Apr 30 10:59:10 CET 2003  Frediano Ziglio <freddy77@angelfire.com>